--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,6 +1,8 @@
 name: deploy-container
 
 on:
+  workflow_dispatch:
+
   push:
     branches:
       - main
@@ -14,6 +16,7 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: main
 
     steps:
       - uses: actions/checkout@v2
